Added anchors and jumpinmg to them

--- a/src/TopScrollBar/TopScrollBar.css
+++ b/src/TopScrollBar/TopScrollBar.css
@@ -14,6 +14,8 @@
 .Menu{
     justify-self: flex-start;
     align-self: center;
+    justify-items: center;
+    align-items: center;
     width: 100%;
 }
 .Middle{
@@ -34,11 +36,9 @@ a{
     padding-left: 3%;
 }
 .Title{
-    justify-self: center;
-    align-self: center;
   grid-column: 2;
     color: #FFFBFC;
-    
+    margin-top: -10%;
 }
 .Cart{
     margin-top: 0%;
@@ -46,4 +46,7 @@ a{
     justify-self: flex-end;
     align-self: center;
     width: 10%;
+}
+a:link {
+text-decoration: none;
 }
