--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,12 @@
 }
 html{
     scroll-behavior: smooth;
+    overflow-x:hidden;
 }
 .Wrapper{
-    position: absolute;
-    width: 100%;
+    position: relative;
+    width: 100vw;
     height: 100%;
-    display: table;
+display: inline-flex;
+flex-direction: column;
 }
