--- a/src/MainPage/ClothesList/ListElement/ListElement.css
+++ b/src/MainPage/ClothesList/ListElement/ListElement.css
@@ -5,6 +5,24 @@
     margin-left: 4%;
     margin-top: 4%;
     background-color: #3D3B3C;
+    transition: transform 0.8s ease-in-out;
+  transform-style: preserve-3d;
+}
+.List-element:hover{
+        transform: rotateY(180deg);
+}
+.Card-Back{
+    width: 100%;
+    height: 100%;
+    background-color: #3D3B3C;
+    transform: rotateY(180deg);
+}
+.Card-Back, .Information{
+    position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
 }
 .Information{
     width: 100%;
@@ -20,8 +38,43 @@
 .Product-name{
     margin-bottom: -1%;
 }
+.Card-Back{
+    display: inline-flex;
+    flex-direction: column;
+   color: #FFFBFC;
+   text-align:center;
+   align-items: center;
+   justify-content: flex-start;
+}
 .Image{
     object-fit: fill;
 width: 80%;
 height: 60%;
+}
+.Add-to-Cart{
+    background-color:#F13030;
+	border-radius:28px;
+	border:1px solid #F13030;
+	display:inline;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size:17px;
+    padding:16px 31px;
+    width: 60%;
+    height: 20%;
+    margin-top: 15%;
+    margin-bottom: 10%;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #1d1d1d;
+}
+.Product-price-back{
+    margin-top: -5%;
+}
+
+.Product-description{
+    margin-bottom: -1%;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-top: -3%;
 }
