--- a/src/MainPage/Header/Header.css
+++ b/src/MainPage/Header/Header.css
@@ -1,11 +1,8 @@
 .HeaderBody{
-    height: 80%;
+    min-height: 100%;
     width: 100%;
-    max-height: 100%;
-    max-width: 100%;
     background-image: radial-gradient(#191919,#1d1d1d) ;
     display: flex;
-    top: 0;
     background-size: cover;
     align-items: center;
     justify-content: center;
