--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 #root{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: absolute; top: 0; left: 0;
 }
 html{
