--- a/src/MainPage/Body/Body.css
+++ b/src/MainPage/Body/Body.css
@@ -4,9 +4,11 @@
         width: 100%;
         max-height: 100%;
         max-width: 100%;
-        background-image: radial-gradient(#FFFBFC,white) ;
+        background-image: radial-gradient(#FFFBFC,#FFFBFC) ;
         display: flex;
         top: 0;
-        justify-content: center;
-    
+        justify-content: flex-end;
+        justify-items: center;
+
 }
+
