--- a/src/MainPage/ClothesList/ClothesList/ClothesList.css
+++ b/src/MainPage/ClothesList/ClothesList/ClothesList.css
@@ -1,6 +1,24 @@
 .row{
-    width: 100em;
+    
+    margin:0,auto;
+    padding:1px;
+    margin-top: 1%;
+    display: flex;
+    animation: 1s ease-out 0s 1 slideInFromLeft;
+    justify-content: center;
 }
 #Shop{
-    margin-top: 30vh;
+    margin-top: 10vh;
 }
+.Wrap-List{
+    width: 70%;
+    
+}
+@keyframes slideInFromLeft {
+    0% {
+      opacity: 0%;
+    }
+    100% {
+      opacity:100%;
+    }
+  }
