--- a/src/MainPage/ClothesList/ListElement/InspectedElement.css
+++ b/src/MainPage/ClothesList/ListElement/InspectedElement.css
@@ -1,7 +1,58 @@
 .Storage{
-width: 100em;
-    height: 90vh;
+width: 60%;
+    height: 70%;
     background-color: #FFFBFC;
-    display: flex;
-
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    justify-items: flex-start;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 100%;
+    animation: 1.4s ease-out 0s 1 slideInFromLeft;
 }
+.Inspect-Img{
+    width: 20em;
+    height: 20em;
+    margin-top: 3%;
+    margin-left: 5%;
+    margin-right: 5%;
+    animation: 1s ease-out 0s 1 slideInFromLeft;
+}
+.InspectedElement{
+    margin-top: 3%;
+    display: flex;
+}
+.GetBack{
+    width: 20%;
+}
+.Inspect-Price{
+    margin-top: -2%;
+}
+.Add-To-Cart{
+    background-color:#F13030;
+	border-radius:28px;
+	border:1px solid #F13030;
+	display:inline;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size:17px;
+    padding:16px 31px;
+    width: 20%;
+    align-self: center;
+    height: 20%;
+    margin-top: 15%;
+    margin-bottom: 10%;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #1d1d1d;
+}
+@keyframes slideInFromLeft {
+    0% {
+      opacity: 0%;
+    }
+    100% {
+      opacity:100%;
+    }
+  }
+  
