Added some mobile compability

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,12 @@
     height: 100vh;
     position: absolute; top: 0; left: 0;
 }
-html{
+html,body{
     scroll-behavior: smooth;
     overflow-x:hidden;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
 }
 .Wrapper{
     position: relative;
