--- a/src/App.css
+++ b/src/App.css
@@ -16,4 +16,14 @@ html,body{
     height: 100%;
 display: inline-flex;
 flex-direction: column;
+justify-content: center;
+}
+
+.Wrapper-cart{
+    position: relative;
+    width: 100vw;
+    height: 100%;
+display: inline-flex;
+flex-direction: row;
+justify-content: center;
 }
