--- a/src/TopScrollBar/TopScrollBar.css
+++ b/src/TopScrollBar/TopScrollBar.css
@@ -20,7 +20,8 @@
 }
 .Middle{
     justify-self: center;
-    align-self: center;
+    align-self: flex-end;
+    width: 100%;
 }
 .End{
     justify-self: flex-end;
@@ -38,7 +39,6 @@ a{
 .Title{
   grid-column: 2;
     color: #FFFBFC;
-    margin-top: -10%;
 }
 .Cart{
     margin-top: 0%;
@@ -49,4 +49,9 @@ a{
 }
 a:link {
 text-decoration: none;
+}
+.cart-button{
+    background-color: transparent;
+    border: transparent;
+    width: 100%;
 }
