Added burger menu to the top scrollbar
TODO: add functionalities to menu options to redirect to other routes (also should add those first :P)

--- a/src/MainPage/ClothesList/ListElement/InspectedElement.css
+++ b/src/MainPage/ClothesList/ListElement/InspectedElement.css
@@ -15,7 +15,7 @@ width: 60%;
 .Inspect-Img{
     width: 20%;
     height: auto;
-    margin-top: 3%;
+    margin-top: 100px;
     margin-left: 5%;
     margin-right: 5%;
     animation: 1s ease-out 0s 1 slideInFromLeft;
