--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -6,6 +6,7 @@
 html,body{
     scroll-behavior: smooth;
     overflow-x:hidden;
+    overflow-y: scroll;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
