--- a/Client/src/MainPage/Cart/CartElement.css
+++ b/Client/src/MainPage/Cart/CartElement.css
@@ -3,7 +3,7 @@
     align-items: center;
     width: 100%;
     height: 30%;
-    box-sizing: border-box;
+    border-bottom: 1px solid #D0D0D0;
 }
 .cart-img{
     padding-right: 5%;
@@ -13,12 +13,11 @@
     justify-self: flex-start;
 }
 .cost-cart{
-    justify-self: flex-start;
+    justify-self: flex-end;
     align-self: center;
     margin-top: 4%;
-    margin-right: auto;
     font-size: 2vw;
-    margin-left: -17%;
+    margin-right: 10px;
 }
 .Remove-Cart{
     justify-self: flex-end;
@@ -30,4 +29,7 @@
     font-size: 3vw;
   align-self: center;
   justify-self: center;
+}
+.TitleWrapper-Cart{
+    width: 600px;
 }
