--- a/Client/src/MainPage/Cart/CartPage.css
+++ b/Client/src/MainPage/Cart/CartPage.css
@@ -1,15 +1,20 @@
 .Storage-cart{
-    margin-top: 5rem;
-    width: 80%;
-    height: 85%;
+    margin-top: 4rem;
+    width: 100%;
+    height: 80%;
     justify-self: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 .row-cart{
-overflow-y: scroll;
-height: 60%;
-align-self: flex-end;
+    margin-left: 5%;
+border-top: 1px solid #D0D0D0;
+border-bottom: 1px solid #D0D0D0;
+overflow-y: auto;
+height: 100%;
+width: 100%;
+align-self: flex-start;
+margin:0;
 }
 .Total-cart{
     text-align: center;
@@ -31,4 +36,39 @@ align-self: flex-end;
     justify-self: center;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #1d1d1d;
+}
+.Empty-cart-text{
+    text-align: center;
+}
+.Checkout-side{
+    width: 40%;
+    text-align: center;
+    margin-left: 3%;
+}
+.Checkout-cart{
+    border-top: 1px solid #D0D0D0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+h1{
+text-align: left;
+}
+@media (max-width : 900px) {
+    .Storage-cart{
+        flex-direction: column;
+    }
+    .Checkout-side{
+        align-self: center;
+        width: 90%;
+        margin-top: 30%;
+        text-align: center;
+        margin-left: 0;
+    }
+    .HCart{
+        font-size: 24px;
+    }
+    .row-cart{
+        width: 100%;
+    }
 }
