--- a/Client/src/MainPage/Cart/CartPage.css
+++ b/Client/src/MainPage/Cart/CartPage.css
@@ -6,12 +6,18 @@
     display: flex;
     flex-direction: row;
 }
+.My-cart{
+    width: 68%;
+    margin-left: 1%;
+}
 .row-cart{
+    margin-bottom: -5px;
     margin-left: 5%;
 border-top: 1px solid #D0D0D0;
 border-bottom: 1px solid #D0D0D0;
 overflow-y: auto;
 height: 100%;
+max-height: 650px;
 width: 100%;
 align-self: flex-start;
 margin:0;
@@ -41,7 +47,7 @@ margin:0;
     text-align: center;
 }
 .Checkout-side{
-    width: 40%;
+    width: 25%;
     text-align: center;
     margin-left: 3%;
 }
@@ -53,6 +59,7 @@ margin:0;
 }
 h1{
 text-align: left;
+font-size: 30px;
 }
 @media (max-width : 900px) {
     .Storage-cart{
@@ -61,7 +68,8 @@ text-align: left;
     .Checkout-side{
         align-self: center;
         width: 90%;
-        margin-top: 30%;
+        margin-top: 15%;
+        margin-bottom: 10%;
         text-align: center;
         margin-left: 0;
     }
@@ -71,4 +79,11 @@ text-align: left;
     .row-cart{
         width: 100%;
     }
+    .My-cart{
+        width: 100%;
+    }
+    h1{
+        text-align: center;
+        font-size: 30px;
+        }
 }
