--- a/Client/src/MainPage/Pages/Contact/ContactPage.css
+++ b/Client/src/MainPage/Pages/Contact/ContactPage.css
@@ -1,7 +1,7 @@
 .ContactPage{
     width: 100%;
     height: 100%;
-    margin-top: 3%;
+    margin-top: 50px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -36,11 +36,18 @@ margin-right: 1%;
     display: flex;
     flex-direction: column;
     width: 100%;
+    text-align: center;
 }
 .Contact-Names{
     width: 100%;
     display: flex;
 
+}
+.Wrapper-Contact{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 .E-mail-Contact{
     width:50%;
