--- a/Client/src/MainPage/Header/Header.css
+++ b/Client/src/MainPage/Header/Header.css
@@ -6,6 +6,7 @@
     background-size: cover;
     align-items: center;
     justify-content: center;
+    justify-self: center;
 }
 .Logo{
     position: relative;
