--- a/Client/src/MainPage/Body/Body.css
+++ b/Client/src/MainPage/Body/Body.css
@@ -1,14 +1,16 @@
 .Content-body{
     
-        height: 77%;
+        height: fit-content;
         width: 100%;
-        max-height: 100%;
         max-width: 100%;
         background-image: radial-gradient(#FFFBFC,#FFFBFC) ;
         display: flex;
         top: 0;
-        justify-content: flex-end;
+        justify-content: center;
         justify-items: center;
 
+}
+.wrapper-list{
+        height: fit-content;
 }
 
