--- a/Client/src/MainPage/Cart/CartElement.css
+++ b/Client/src/MainPage/Cart/CartElement.css
@@ -13,10 +13,19 @@
     align-self: center;
     justify-self: flex-start;
 }
-.Remove-Cart{
+
+.Add-to-Cart-cart{
+    background-color: #f22525; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;   
     justify-self: flex-end;
     margin-left: auto;
-    align-self: center;
+    align-self: center; 
+    cursor: pointer;
 }
 .TitleWrapper-Cart{
     width: 600px;
@@ -26,7 +35,7 @@ h2{
     font-size: 30px;
 }
 h3{
-    margin-top: -10px;
+    margin-top: -15px;
 font-size: 24px;
 }
 .Wrap-List-checkout{
