--- a/Client/src/MainPage/ClothesList/ListElement/InspectedElement.css
+++ b/Client/src/MainPage/ClothesList/ListElement/InspectedElement.css
@@ -2,7 +2,6 @@
 .Storage{
 width: 60%;
     height: 70%;
-    background-color: #FFFBFC;
     display: inline-flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -46,21 +45,25 @@ width: 60%;
 .Inspect-Name{
     font-size: 4vh;
 }
-.Add-To-Cart{
-	font-size:17px;
-    padding:16px 31px;
-    width: 300px;
-    align-self: center;
-    height: 100px;
-    margin-top: 15%;
-    margin-bottom: 10%;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #1d1d1d;
-}
+
 .GetBackCross{
     color: black;
     width: 60px;
     height: auto;
+}
+.Add-to-Cart-inspect{
+    background-color: #f22525; 
+    border: none;
+    color: white;
+    width: 300px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+   margin-top: 100px;
+    align-self: center;    
+    cursor: pointer;
 }
 @keyframes slideInFromLeft {
     0% {
