--- a/Client/src/MainPage/ClothesList/ListElement/ListElement.css
+++ b/Client/src/MainPage/ClothesList/ListElement/ListElement.css
@@ -1,30 +1,43 @@
 .List-element{
     position: relative;
     display: inline-block;
-    width: 20em;
-    height: 30em;
+    width: 300px;
+    height: 450px;
     margin-left: 1%;
     margin-top: 1%;
-    background-color: #3D3B3C;
-    transition: transform 0.5s ease-in-out;
-  transform-style: preserve-3d;
+  align-self: center;
+  justify-self: center;
+
 }
-.List-element:hover{
+.List-Wrap{
+    position: absolute;
+    min-width: 100%;
+    background-color: #3D3B3C;
+    min-height: 100%;
+    transform-style: preserve-3d;
+    transition: all 1s ease;
+    transform: perspective(100%);
+}
+.List-element:hover > .List-Wrap {
+        transform-style: preserve-3d;
         transform: rotateY(180deg);
+       transform: translate3D(0, 0, 0);
+        -webkit-transform: rotateY(180deg) translateZ(-1px);
+      
 }
 .Card-Back{
     width: 100%;
     height: 100%;
     background-color: #3D3B3C;
-    transform: rotateY(180deg);
+    transform: rotateY(180deg);   
 }
 .Card-Back, .Information{
     position: absolute;
   width: 100%;
   height: 100%;
+  overflow: hidden;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
-  overflow: hidden;
 }
 .Information{
     width: 100%;
