--- a/Client/src/TopScrollBar/TopScrollBar.css
+++ b/Client/src/TopScrollBar/TopScrollBar.css
@@ -52,10 +52,18 @@ a{
 }
 .Cart{
     margin-top: 0%;
-    margin-left: -5%;
+    margin-left: -1%;
     justify-self: flex-start;
     align-self: flex-end;
     width: 60px;
+}
+.Cart-wobble{
+    margin-top: 0%;
+    margin-left: -1%;
+    justify-self: flex-start;
+    align-self: flex-end;
+    width: 60px;
+    animation: wobble 1s 1;
 }
 a:link {
 text-decoration: none;
@@ -68,4 +76,19 @@ text-decoration: none;
 align-self: center;
 justify-self: flex-end;
 cursor: pointer;
+}
+
+@keyframes wobble{
+    25%{
+        transform: rotate(15deg);
+    }
+    50%{
+        transform: rotate(-30deg);
+    }
+    75% {
+        transform: rotate(5deg);
+      }
+      100% {
+        transform: rotate(0deg);
+      }
 }
