Revert "changed colorchoice to not bug"
This reverts commit 1e962e8c56f451771292fb8a87f4a0a995b8e3be.

--- a/src/MainPage/ClothesList/ListElement/InspectedElement.css
+++ b/src/MainPage/ClothesList/ListElement/InspectedElement.css
@@ -78,7 +78,10 @@ width: 60%;
   }
   @media (max-width : 900px) {
     .Storage{
-        display: inline;
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        height: fit-content;
     }
     .Inspect-Img{
         width: 50%;
@@ -86,11 +89,12 @@ width: 60%;
         animation: 1s ease-out 0s 1 slideInFromLeft;
     }
     .InspectedElement{
-        margin-top: 5%;
-        display: inline;
+        margin-bottom: auto;
         align-items: center;
         justify-items: center;
+        justify-content: center;
         text-align: center;
+        flex-wrap: wrap;
     }
     .GetBack{
         margin-top: -10%;
@@ -103,6 +107,17 @@ width: 60%;
     .GetBackCross{
         width: 40px;
         height: auto;
+    }
+    .Inspect-Desc{
+        width: 100%;
+        font-size: 20px;
+        text-align: justify;
+    }
+    .Inspect-Price{
+        font-size:24px;
+    }
+    .Inspect-Name{
+        font-size: 32px;
     }
     .Add-to-Cart-inspect{
 margin-top: 10%;
